exchange numbers and names

--- a/sections/frontpage.tex
+++ b/sections/frontpage.tex
@@ -24,12 +24,12 @@
     \vspace{0.2cm}
     \begin{center}
     \Huge{\textbf{
-      11$^\text{th}$ HGSFP Winter School% insert your title here
+      12$^\text{th}$ HGSFP Winter School% insert your title here
     }}
     \end{center}
     \begin{center}
       \Large{
-        Obergurgl 2018% insert your subtitle here
+        Obergurgl 2019% insert your subtitle here
       }
     \end{center}
     \vspace{0.2cm}\\
@@ -43,12 +43,13 @@
     }\\
     \vspace{0.2cm}
     {\Large
-    	Tobias Buck \\
-		Alexander Egl \\
-		Katharina Haase \\
-		Max Hartmann \\
-		Marvin Holten \\
-		Dennis Schulz \\
+	Tim Sailer\\
+	Akos Kungl\\
+	Martin Schlecker\\
+	Jeannette Jansen\\
+	Dominik Lentrodt\\
+	Ralf Klemt\\
+
 %Insert your group name or real names here
     }
   \end{center}
