--- a/sections/text.tex
+++ b/sections/text.tex
@@ -1,8 +1,8 @@
 \pdfbookmark{Summary}{label:summary}
 \section*{General Summary}
 This document concludes the 12th HGSFP Winter School that took place at
-the University Center in Obergurgl from 26th to 30th of January 2018. In
-total 48 graduate students from Heidelberg and 10 lecturers participated
+the University Center in Obergurgl from 16th to 20th of January 2019. In
+total, 48 graduate students from Heidelberg and 10 lecturers participated
 in the five-day event. The aim of the Winter School was to give students
 the opportunity to get insights into other research fields in
 Heidelberg apart from their own field. In the course of this, one of the
@@ -12,12 +12,6 @@ end, we organized a scientific programme consisting of 10 lectures given
 by speakers from Heidelberg and other universities and two poster
 sessions with elevator talks (see Appendix A).
 
-The general interest in the school was very high such that we had to
-select the 42 participants from 73 applications in total.
-Fortunately none of our speakers had to cancel and in addition we where
-able to replace all students that had to cancel on short notice by other
-applicants. Consequentially, all the reserved 58 beds in Obergurgl where
-filled.
 
 \subsection*{Participant Selection}
 As expected, we received more applications for the school than spots were available. We therefore had to select participants from the pool of applicants, which we wanted to perform as fair as possible. We felt it was important to be both transparent about and accountable for our selection. For this reason, we imposed a selection algorithm, laid open the complete procedure (with anonymized data)\footnote{https://github.com/matiscke/HGSFPschoolParticipantSelection}, and explain what decisions went into the selection. In the following, we give an overview on how we selected the participants for the HGSFP winter school 2019.
