add lectures, venue, poster sessions

--- a/sections/text.tex
+++ b/sections/text.tex
@@ -20,7 +20,6 @@ Designing the application form was perhaps the most difficult task, and it is at
 \subsection*{Pre-selection}
 Excluding speakers, we have 52 spots for the meeting. Our participant selection proceeded in two parts. In the first part, we rejected candidates outright who were either (1) duplicate entries or (2) candidates who had informed us that they would not be able to come. Two spots were reserved for the HGSFP representatives. Finally, we pre-selected the organizing committee, who needs to be present at the school. Thus, a total of 8 participants (6 organizers, 2 representatives) were pre-selected. We then anonymized our applicant pool by replacing names and other identifying information with a unique identifier. 
 
-\subsection*{Participant Selection}
 For the remaining 52 - 8 = 44 slots, we used the software \texttt{entrofy} to optimize our participant set based on a set of well-defined criteria on which the organizers agreed. It's worth noting here that this discussion took place before performing the selection, which then depended entirely on the goals for the selection and was independent of the input data set. 
 
 \subsection*{Target Distributions}
@@ -70,13 +69,15 @@ https://github.com/matiscke/HGSFPschoolParticipantSelection.
 
 
 \section*{Lectures}
-
+We selected the lecturers based on a few key ideas: First, we tried to give the participants a glimpse of the wide range of different research areas within the HGSFP by selecting lecturers from very different research backgrounds both in experimental and theoretical physics. Furthermore, we asked lecturers at different stages of their academic career, from post-doctoral researcher to senior professor, to join the winter school, in order to encourage discussions between participants and lecturers on career choices in academia. Finally, we asked that all lecturers actively participate in the winter school in excess to their own lectures, in particular to allow for discussions with the participants in a relaxed atmosphere between lectures.
+Each lecturer gave two lectures of 90 minutes each, with three lectures taking place in parallel such that the participants were able to choose a schedule of lectures according to their own interests. All lectures were structured in a way that also participants from different research fields could join. This opportunity to get a broader overview of the research activities within the HGSFP was embraced by the students. The combination of a high quality of lectures with a mixed, but interested audience lead to many discussions and exchanges of ideas during and also after the lectures.
+In addition to the regular schedule of lectures there was a special lecture for all participants on the topic of avalanche research. The special lecture was accompanied by an excursion the following day, where the participants were able to gain some insight into the practical aspects of avalanche research and risk assessment.
 
 \section*{Poster Sessions}
-
+In addition to the lectures, the participants were asked to present their own research in form of a poster. There were two poster sessions on two of the evenings. We adopted the idea of previous years to start off the poster sessions by one minute-long ‘elevator talks’. Here, all students presenting their research in the given poster session had the opportunity to introduce themselves and the topic of their poster within one minute. This helped the participants to get an overview of potentially interesting posters. The poster sessions were well received by the students which expressed itself in particular in the lively discussions during the poster sessions and in particular also afterwards.
 
 \section*{Venue}
-
+The conference center of the university of Innsbruck was a perfect choice for the school. With all the participants and lecturers staying in the same place, the possibility to talk to other participants and lecturers was greatly enhanced. There were different rooms for all possible needs available, ranging from big lecture halls for the special lecture and the poster sessions, to smaller lecture halls, rooms for concentrated working as well as lounge areas for more relaxed discussions. A wide range of (sports) activities was available in the direct vicinity of the conference center. The staff of the conference center were very helpful in all situations, making the stay a very pleasant experience.
 
 
 \section*{Travel}
