add travel and social event

--- a/sections/text.tex
+++ b/sections/text.tex
@@ -81,10 +81,16 @@ The conference center of the university of Innsbruck was a perfect choice for th
 
 
 \section*{Travel}
-
+Similar as in previous years, the travel was done by bus over night with two drivers, which allowed them to drive without the need for stops or a hotel room in Obergurgl,
+as they could directly drive the way back. This allowed us to be in Obergurgl in time for breakfast. While it seemed exhausting for some people, as they arrival day did not have a 
+fixed schedule and could be spent relaxing in the hotel, overall the participants where happy with this itinerary.
+Traveling back was done on the late afternoon, giving everyone the time to enjoy the last afternoon while arriving in Heidelberg just before 11 pm. Following the general mood, a similar itinerary schedule is recommended for the future.
 
 \section*{Social Event}
-
+As a yearly tradition, the first evening of the Winter School was
+devoted to the social event — Eisstockschiessen. The event served well for people to get to know each other in a relaxed and fun environment. The scope of the event seemed to be appreciated with everyone joining.
+The last day was concluded with a big group going sledding which approximated a second social event, 
+with less organizing and no funding, but being appreciated just as well.
 
 \section*{Final Remarks}
 In summary, the winter school was a great success. We are confident that the goals of the school were achieved, and the very positive feedback of students and lecturers strengthens this impression. The organizers are very thankful for the great organizational and financial support of the HGSFP for this event and we hope that the tradition of the winter school will be carried on in the future.
