--- a/sections/text.tex
+++ b/sections/text.tex
@@ -92,11 +92,21 @@ devoted to the social event — Eisstockschiessen. The event served well for peo
 The last day was concluded with a big group going sledding which approximated a second social event, 
 with less organizing and no funding, but being appreciated just as well.
 
+\input{sections/scienceQuiz.tex}
+
+\newpage
+\input{sections/speakerAbstracts.tex}
+
+%\input{sections/participantAbstracts.tex}
+
 \section*{Final Remarks}
 In summary, the winter school was a great success. We are confident that the goals of the school were achieved, and the very positive feedback of students and lecturers strengthens this impression. The organizers are very thankful for the great organizational and financial support of the HGSFP for this event and we hope that the tradition of the winter school will be carried on in the future.
 
 
+
+
 \newpage
+\abstract
 \section*{A $\qquad$ Schedule of the HGSFP Winterschool 2018}
 
 \pdfbookmark{A Schedule}{label:appa}
